--- a/resume.html
+++ b/resume.html
@@ -116,6 +116,13 @@
                     hardware support to students, faculty and staff.</li>
                 <li>Meet one-on-one with faculty to troubleshoot office desktop computer issues.</li>
               </ul>
+              <strong>BARNES & NOBLE | Hyannis, MA</strong></br>
+              2011-2015 | Bookseller</br>
+              <ul>
+                <li>Connect customers to the books they need, conduct basic reader's advisory.</li>
+                <li>Check out customer purchases.</li>
+                <li>Regularly rotate magazines racks.</li>
+              </ul>
               <strong>HOLIDAY HILL INN AND SUITES | Dennisport, MA</strong></br>
               2006-2015 | Everything</br>
               <ul>
@@ -124,13 +131,23 @@
                 <li>Cleaned rooms when short on maids.</li>
                 <li>Staffed front desk, checked guests in, moved cots around, sorted linens, made the morning coffee.</li>
               </ul>
-              <strong>BARNES & NOBLE | Hyannis, MA</strong></br>
-              2011-2015 | Bookseller</br>
+            </p>
+            <p>
+              <h3>Education</h3>
+              <strong>MASTER OF SCIENCE IN LIBRARY AND INFORMATION SCIENCE | Simmons University '18</strong></br>
+              Concentration in Information Science and Technology</br>
+              Coursework included:
               <ul>
-                <li>Connect customers to the books they need, conduct basic reader's advisory.</li>
-                <li>Check out customer purchases.</li>
-                <li>Regularly rotate magazines racks.</li>
+                <li>Database Management</li>
+                <li>Information Visualization</li>
+                <li>Theories of Information Science</li>
+                <li>Python</li>
+                <li>Programming and Services for Young Adults</li>
+                <li>Collection Development for Young Adults</li>
               </ul>
+              <strong>BACHELOR OF ARTS IN ENGLISH | Wellesley College '14</strong></br>
+              Minor in Chinese Language and Culture</br>
+              A copy of my undergraduate transcript, including coursework, can be found <a href="assets/wellesleyTranscript.pdf">here</a>. 
             </p>
           </p>
       </div>
